--- a/jovie_drawing.html
+++ b/jovie_drawing.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Motivation Meme</title>
+  <title>JOVIE DRAWING</title>
   <link rel="stylesheet" href="./jovie_drawing.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
