--- a/jovie_drawing.html
+++ b/jovie_drawing.html
@@ -13,17 +13,20 @@
 <body>
 
   <div class="poster">
-    <h1>2022</h1><br>
-    <img class="drawing-img" src="./2022_01.jpg" src="2022_01.jpg" />
+    <h1>2022</h1><hr>
     <h1>Flying Pig</h1>
     <p>Flying flying flying Pig</p>
+    <img class="drawing-img" src="./2022_01.jpg" src="2022_01.jpg" />
 <br>
+    <h1>Bear</h1>
     <img class="drawing-img" src="./2022_02.jpg" src="2022_02.jpg" />
-    <h1>Dog</h1>
 <br>
+    <h1>Rainbow</h1>
     <img class="drawing-img" src="./2022_03.jpg" src="2022_03.jpg" />
 <br>
-    <h1>2024</h1><br>
+<br>
+    <h1>2024</h1><hr>
+    <h1>I love you Linda</h1>
     <img class="drawing-img" src="./2024_01.jpg" src="2024_01.jpg" />
 
   </div>
